// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Shows background 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    background={true}
    fixed={true}
    links={
        Array [
            Object {
              "route": "/analysis",
              "text": "analysis",
            },
            Object {
              "route": "/help",
              "text": "help",
            },
          ]
    }
    smallScreen={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "background": true,
      "fixed": true,
      "links": Array [
        Object {
          "route": "/analysis",
          "text": "analysis",
        },
        Object {
          "route": "/help",
          "text": "help",
        },
      ],
      "smallScreen": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "background": true,
        "fixed": true,
        "links": Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ],
        "smallScreen": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Small screen 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    background={true}
    fixed={true}
    links={
        Array [
            Object {
              "route": "/analysis",
              "text": "analysis",
            },
            Object {
              "route": "/help",
              "text": "help",
            },
          ]
    }
    smallScreen={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "background": true,
      "fixed": true,
      "links": Array [
        Object {
          "route": "/analysis",
          "text": "analysis",
        },
        Object {
          "route": "/help",
          "text": "help",
        },
      ],
      "smallScreen": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "background": true,
        "fixed": true,
        "links": Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ],
        "smallScreen": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Transparent background 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    background={false}
    fixed={true}
    links={
        Array [
            Object {
              "route": "/analysis",
              "text": "analysis",
            },
            Object {
              "route": "/help",
              "text": "help",
            },
          ]
    }
    smallScreen={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "background": false,
      "fixed": true,
      "links": Array [
        Object {
          "route": "/analysis",
          "text": "analysis",
        },
        Object {
          "route": "/help",
          "text": "help",
        },
      ],
      "smallScreen": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "background": false,
        "fixed": true,
        "links": Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ],
        "smallScreen": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
